# gram

./: .gitattributes  .gitignore  .goreleaser.hooks.yaml  .goreleaser.yaml  .local.env.json  .mcp.json  .oxfmtrc.json  .playwright-mcp.config.json  .prettierignore  AGE-2704-policy-evals-NOTES.md  CLA.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CRUSH.md  Caddyfile  GAPS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MCP_BENCHMARK_README.md  ONBOARDING.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PLAN-multi-role.md  PLAYGROUND_EDITING_VISION.md  QUICK_REFERENCE.md  README.md  REVIEW.md  SECURITY.md  SPEC-challenge-resolutions.md  USAGE.md  benchmark-mcp-simple.sh  benchmark-mcp-tokens.sh  benchmark_mcp_tokens.py  buf.gen.yaml  buf.yaml  chat-detail-sheet-bug-investigation.md  clarifications.md  compose.yml  config.template.toml  (+44 more)
.beads/: beads.db  beads.db-shm  issues.jsonl  last-touched  sync_base.jsonl
.changeset/: access-request-admin-email-notification.md  access-webhook-event-names.md  account-type-badge.md  account-type-company-credentials.md  account-type-dashboards.md  account-type-unset-backfill.md  adhoc-risk-analysis-workflow.md  admin-api-endpoints.md  admin-chat-analysis-settings.md  admin-refresh-now-remote-sessions.md  afraid-candies-listen.md  afraid-dragons-stare.md  afraid-emus-build.md  afraid-gifts-ring.md  afraid-pandas-study.md  afraid-queens-pump.md  afraid-toes-know.md  age-1993-l1-prompt-injection-classifier.md  (+1463 more)
agents/runner/: Cargo.toml  README.md
agents/runner/.cargo/: config.toml
agents/runner/src/: catalog.rs  clip.rs  compaction.rs  errors.rs  gram_client.rs  http_layer.rs  idempotency.rs  main.rs  mcp_actor.rs  runtime.rs  server.rs  telemetry.rs  vision.rs  wire.rs  workdir.rs  workspace.rs
agents/runner/src/tools/: bun_run.rs  mcp_force_reconnect.rs  mod.rs  tool_search.rs
cli/: README.md  (+6 more)
infra/: .gitignore  main.go  pyproject.toml
infra/cmd/infra/: demo.go  descriptors.pb  gen_cc.go  gen_diagram.go  logger.go  presidio_submit.go  root.go  shutdown.go  vars.go  version.go
infra/gcp/pubsub/v1/: options.pb.go  options.proto
infra/gen_py/gcp/pubsub/v1/: options_pb2.py  options_pb2.pyi
infra/gen_py/gram/ping/v1/: ping_pb2.py  ping_pb2.pyi  processor_pb2.py  processor_pb2.pyi
infra/gen_py/gram/ping/v2/: ping_pb2.py  ping_pb2.pyi  processor_pb2.py
infra/gen_py/gram/risk/v1/: custom_rules_analysis_pb2.py  custom_rules_analysis_pb2.pyi  custom_rules_analyzer_pb2.py  custom_rules_analyzer_pb2.pyi  finding_bq_writer_pb2.py  finding_bq_writer_pb2.pyi  finding_ch_writer_pb2.py  finding_ch_writer_pb2.pyi  finding_pb2.py  finding_pb2.pyi  finding_sink_pb2.py  finding_sink_pb2.pyi  gitleaks_analysis_pb2.py  gitleaks_analysis_pb2.pyi  gitleaks_analyzer_pb2.py  gitleaks_analyzer_pb2.pyi  presidio_analysis_pb2.py  presidio_analysis_pb2.pyi  presidio_analyzer_pb2.py  presidio_analyzer_pb2.pyi  presidio_request_pb2.py  presidio_request_pb2.pyi  presidio_scanner_pb2.py  presidio_scanner_pb2.pyi  prompt_injection_analysis_pb2.py  prompt_injection_analysis_pb2.pyi  prompt_injection_analyzer_pb2.py  prompt_injection_analyzer_pb2.pyi  prompt_policy_analysis_pb2.py  prompt_policy_analysis_pb2.pyi  prompt_policy_analyzer_pb2.py  prompt_policy_analyzer_pb2.pyi  scanners_pb2.py
infra/gen_py/gram/telemetry/v1/: log_record_pb2.py  log_record_pb2.pyi  noop_pb2.py  noop_pb2.pyi
infra/gram_infra/: __init__.py
infra/gram_infra/demos/: README.md  __init__.py  _common.py  pubsub.py  pubsub_stream.py
infra/gram_infra/pubsub/: __init__.py  broker.py  discover.py  publisher.py  subscriber.py
infra/internal/attr/: conventions.go
infra/internal/diagram/: diagram.go  diagram_test.go
infra/internal/gcp/: bigquery.go  bigquery_test.go  cc.go  cc_pubsub.go  cc_pubsub_test.go  pubsub_discover.go  pubsub_emulator_test.go  pubsub_schema.go  pubsub_schema_test.go  values.go
infra/internal/gcp/testdata/proto/test/schema/v1/: deprecated.proto  map_external.proto  map_scalar.proto  named.proto  nested.proto  widget.proto  withduration.proto
infra/internal/o11y/: levels.go  slog.go
infra/outbox/event/v1/: event.pb.go  event.proto  outbox_processor.pb.go  outbox_processor.proto
infra/pkg/gcp/: publisher.go  publisher_mock.go  publisher_noop.go  publisher_test.go  pubsub_gcp.go  pubsub_local.go  subscriber.go  subscriber_test.go
infra/proto/gcp/pubsub/v1/: options.proto
infra/proto/gram/ping/v1/: ping.proto  processor.proto
infra/proto/gram/ping/v2/: ping.proto  processor.proto
infra/proto/gram/risk/v1/: custom_rules_analysis.proto  custom_rules_analyzer.proto  finding.proto  finding_bq_writer.proto  finding_ch_writer.proto  finding_sink.proto  gitleaks_analysis.proto  gitleaks_analyzer.proto  presidio_analysis.proto  presidio_analyzer.proto  presidio_request.proto  presidio_scanner.proto  prompt_injection_analysis.proto  prompt_injection_analyzer.proto  prompt_policy_analysis.proto  prompt_policy_analyzer.proto  scanners.proto
infra/proto/gram/telemetry/v1/: log_record.proto  noop.proto
infra/tests/: conftest.py  test_backends.py  test_bigquery_sink.py  test_binding.py  test_handle.py  test_integration.py  test_naming.py  test_options.py  test_publisher.py
presidio-scanner/: README.md  pyproject.toml
presidio-scanner/presidio_scanner/: main.py
pystreams/: Dockerfile.pystreams  Dockerfile.pystreams.dockerignore  pyproject.toml
pystreams/src/pystreams/attr/: __init__.py
pystreams/src/pystreams/cmd/: bootstrap.py  flags_control.py  flags_gcp.py  flags_presidio.py  flags_service.py  multi.py  presidio_load.py  receiver.py
pystreams/src/pystreams/health/: __init__.py
pystreams/src/pystreams/ping/: handler.py
pystreams/src/pystreams/risk/: handler.py  metrics.py  scanner.py
pystreams/src/pystreams/risk/presidiofp/: __init__.py  classify.py  email.py  ip.py  ip_asn.py
pystreams/tests/: conftest.py  test_flags_presidio.py  test_health.py  test_otel.py  test_presidiofp.py  test_risk_handler.py  test_risk_metrics.py  test_risk_scanner.py  test_tracing.py
services/pi-classifier/: Dockerfile  app.py  pyproject.toml  requirements.txt
(+25645 files in other folders)
