[project]
name = "gram-infra"
version = "0.1.0"
description = "Gram infra Python package: generated protobuf types and a Pub/Sub convenience layer"
requires-python = ">=3.12"
dependencies = [
  # protobuf must satisfy the runtime-version guard emitted in the generated
  # gen_py/**/*_pb2.py (ValidateProtobufRuntimeVersion(PUBLIC, 7, 35, 0)). The
  # generator is buf's protocolbuffers/python:v35.0 plugin; keep this in lockstep
  # with buf.gen.yaml when the plugin version changes.
  "protobuf>=7.35.0,<8",
  "google-cloud-pubsub>=2.31.0",
  "anyio>=4.13.0",
]

[project.scripts]
pubsub-demo = "gram_infra.demos.pubsub:main"

[project.optional-dependencies]
dev = [
  "pyrefly>=1.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ty>=0.0.48",
  "types-protobuf>=7.34.1.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The wheel bundles three top-level import roots:
#   - gram_infra        : the hand-written convenience layer (this dir)
#   - gcp, gram         : buf-generated protobuf modules, re-rooted from gen_py/
# gen_py/{gcp,gram} have no __init__.py; they import fine as PEP 420 implicit
# namespace packages, so the buf-generated tree is left untouched.
[tool.hatch.build.targets.wheel]
packages = ["gram_infra", "gen_py/gcp", "gen_py/gram"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
project-excludes = ["**/gen_py/**"]

[tool.ty.src]
exclude = ["**/gen_py/**"]
