[project]
name = "gram-infra"
version = "0.1.0"
description = "Gram infra Python package: generated protobuf types and a Pub/Sub convenience layer"
requires-python = ">=3.14"
dependencies = [
  # protobuf must satisfy the runtime-version guard emitted in the generated
  # gen_py/**/*_pb2.py (ValidateProtobufRuntimeVersion(PUBLIC, 7, 35, 0)). The
  # generator is buf's protocolbuffers/python:v35.0 plugin; keep this in lockstep
  # with buf.gen.yaml when the plugin version changes.
  "protobuf>=7.35.0,<8",
  "google-cloud-pubsub>=2.31.0",
  "anyio>=4.14.0",
  "asyncer>=0.0.17",
  "structlog>=26.1.0",
  "opentelemetry-api>=1.42.1",
]

[project.scripts]
pubsub-demo = "gram_infra.demos.pubsub:main"
pubsub-stream-demo = "gram_infra.demos.pubsub_stream:main"

# PEP 735 dependency group rather than an optional-dependencies extra: uv
# auto-installs the dev group on `uv sync` / `uv run`, so the documented
# commands (`uv run pytest`, `PUBSUB_DEMO_BACKEND=trio uv run pubsub-demo`)
# work on a fresh checkout without an undocumented --extra flag.
[dependency-groups]
dev = [
  # Runtime detection of code that blocks the asyncio event loop. Dev-only: the
  # blocking guard is enforced across the test suite (see tests/conftest.py), but
  # never shipped — runtime activation is the consuming app's job (e.g. pystreams).
  "aiocop>=1.1.4",
  "pyrefly>=1.0.0",
  "pytest>=9.1.1",
  "pytest-asyncio>=0.24.0",
  # Pulls in trio so the backend-agnostic tests can exercise the library under
  # anyio's trio backend, not just asyncio.
  "anyio[trio]>=4.14.0",
  "ty>=0.0.53",
  "types-protobuf>=7.34.1.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The wheel bundles three top-level import roots:
#   - gram_infra        : the hand-written convenience layer (this dir)
#   - gcp, gram         : buf-generated protobuf modules, re-rooted from gen_py/
# gen_py/{gcp,gram} have no __init__.py; they import fine as PEP 420 implicit
# namespace packages, so the buf-generated tree is left untouched.
[tool.hatch.build.targets.wheel]
packages = ["gram_infra", "gen_py/gcp", "gen_py/gram"]

[tool.ruff]
# gen_py/{gcp,gram} are buf-generated protobuf modules; never lint them.
extend-exclude = ["gen_py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "RUF", "PT", "TID"]

[tool.ruff.lint.per-file-ignores]
# Tests synchronize on bounded poll loops (wait for acks / scheduler readiness),
# which is idiomatic for test orchestration and not a service hot path. ASYNC110
# stays enabled for library code under gram_infra.
"tests/**" = ["ASYNC110"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
project-excludes = ["**/gen_py/**"]
# Lets the checkers resolve `from conftest import ...` the way pytest's
# rootdir-based sys.path insertion does at runtime.
search-path = ["tests", "."]

[tool.ty.src]
exclude = ["**/gen_py/**"]

[tool.ty.environment]
extra-paths = ["tests"]
