[project]
name = "presidio-scanner"
version = "0.1.0"
description = "Experiment: consume gram.risk.v1.PresidioRequest messages, scan with Presidio, print Findings"
requires-python = ">=3.12"
dependencies = [
  # Reuses the gram-infra package for the generated risk protos
  # (gram.risk.v1) and the type-safe Pub/Sub subscriber layer.
  "gram-infra",
  "presidio-analyzer>=2.2",
  "google-cloud-pubsub>=2.31.0",
  # Keep in lockstep with infra/pyproject.toml's runtime-version guard.
  "protobuf>=7.35.0,<8",
  # The small English spaCy model Presidio's NLP engine loads. Pinned as a
  # direct wheel so `uv sync` provisions it (no separate `spacy download` step,
  # which would also need spaCy's optional `click` CLI dependency).
  "en-core-web-sm",
  # spaCy imports `click` at import time (via spacy.cli); it isn't pulled in
  # transitively in this resolution, so depend on it explicitly.
  "click>=8",
]

[project.scripts]
presidio-scanner = "presidio_scanner.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["presidio_scanner"]

# Resolve gram-infra from the sibling infra/ project rather than an index.
[tool.uv.sources]
gram-infra = { path = "../infra", editable = true }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
