[package]
name = "gram-assistant-runner"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "gram-assistant-runner"
path = "src/main.rs"

[dependencies]
agentkit-adapter-completions = "0.5.0"
agentkit-core = "0.5.0"
agentkit-http = { version = "0.5.0", features = ["reqwest-middleware-client"] }
agentkit-loop = "0.5.0"
agentkit-mcp = "0.5.0"
agentkit-provider-openrouter = "0.5.0"
agentkit-reporting = { version = "0.5.0", features = ["tracing"] }
agentkit-tool-fs = "0.5.0"
agentkit-tools-core = { version = "0.5.0", features = ["schemars"] }
agentkit-tools-derive = "0.5.0"
rmcp = { version = "1.5.0", default-features = false, features = ["client", "transport-streamable-http-client-reqwest", "reqwest"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

async-trait = "0.1"
axum = { version = "0.8", features = ["http1", "json"] }
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
reqwest = "0.13.2"
reqwest-middleware = "0.5"
reqwest-retry = "0.9.1"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
